--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ functools32
 combomethod
 python-dateutil
 Flask-Mail
-flask-marshmallow
-marshmallow-sqlalchemy
+# flask-marshmallow
+# marshmallow-sqlalchemy
 flask-cors
 nltk
