--- a/app/apply_blueprint/package.json
+++ b/app/apply_blueprint/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "promise-polyfill": "7.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
