--- a/app/apply_blueprint/package.json
+++ b/app/apply_blueprint/package.json
@@ -9,7 +9,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "promise-polyfill": "6.0.2",
-    "babel-preset-es2015""6.24.1"
+    "babel-preset-es2015": "6.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
