stunnel vars deleted, localhost changed - transparent classroom now working

--- a/stunnel.conf
+++ b/stunnel.conf
@@ -1,18 +1,13 @@
-
-; chroot = /var/run/stunnel
-; setuid = nobody
-; setgid = nobody
-
 pid = /stunnel.pid
 
 cert = stunnel.pem
-client=yes
-sslVersion = TLSv1
+client=no
+sslVersion = all
 options = NO_SSLv2
 foreground = yes
 output = stunnel.log
 
 [https]
 accept=5443
-connect=localhost:3000
+connect=localhost:5000
 TIMEOUTclose=0
